pDLNA CHANGELOG
(c) 2010-2014 Stefan Heumader
email: stefan@heumader.at
webpage: http://www.pdlna.org

Licened under GPLv3 (see LICENSE file)

-----------------------------------------

Version 0.70.0
xx-xx-2014

- added the name and line of the file, which called the fatal() or log() subroutine, to the log messages (based on the idea of marc)
- added LogFileRotation configuration parameter, so pDLNA is now able to rotate logfiles on his own (based on the idea of marc)
- added masking special characters in WebUI
- moved WebUI to UTF-8
- fixed a bug in WebUI regarding uninitialized values in WebUI (thanks to marc)
- additional fix for issue #21 (https://github.com/geuma/pDLNA/issues/21) -aka- special characters in filenames break some regular expressions (thanks to marc)
- the Yamaha RX-V3067 seems to use a different XML structure (implemented a more generic way to find elements in XML) (thanks to marc)
- added codec information for DTS sound
- improved codec and container detection via FFmpeg
- added support for PostgreSQL
- fixed issue #25 (https://github.com/geuma/pDLNA/issues/25) -aka- invalid BrowseMetadata response

Version 0.64.3
29-12-2013

- modified WebUI to open Changelog link to project website in a new browser tab/window
- improved regular expression to determine valid FFmpeg installations (thanks to marc)
- added encoding of special characters in XML

Version 0.64.2
09-12-2013

- modified domain from pdlna.com to pdlna.org
- fixed issue #24 (https://github.com/geuma/pDLNA/issues/24) -aka- directory listings not working, when data fields not set

Version 0.64.1
25-11-2013

- fixed issue #23 (https://github.com/geuma/pDLNA/issues/23) -aka- removed using old dependency Movie::Info from PDLNA::Media

Version 0.64.0
03-11-2013

- moved from Movie::Info to using FFmpeg natively to determine media information (based on the idea of lombao)
- using FFmpeg instead of Mplayer to create VideoThumbnails
- using FFmpeg instead of Mplayer to gather media streams