@@ -1,1 +1,1 @@
-0.70.0 (2014-Xxx-xx)
+0.70.0 (2014-Aug-16)
