@@ -35,7 +35,7 @@ EnableGeneralStatistics	On
 # EnableDBStatistics (NOT FOR PRODUCTIVE ENVIRONMENT)
 # specify if pDLNA should gather statistics about its DB queries
 # enabling this feature will decrease the performance of your pDLNA installation
-# and should only be used to improve database performance
+# and should only be used to do some investigations to improve database performance
 # if not specified, it will be disabled
 EnableDBStatistics	Off
 
