@@ -8,7 +8,7 @@ Licened under GPLv3 (see LICENSE file)
 -----------------------------------------
 
 Version 0.70.0
-xx-xx-2014
+16-08-2014
 
 - added the name and line of the file, which called the fatal() or log() subroutine, to the log messages (based on the idea of marc)
 - added LogFileRotation configuration parameter, so pDLNA is now able to rotate logfiles on his own (based on the idea of marc)
@@ -19,8 +19,11 @@ xx-xx-2014
 - the Yamaha RX-V3067 seems to use a different XML structure (implemented a more generic way to find elements in XML) (thanks to marc)
 - added codec information for DTS sound
 - improved codec and container detection via FFmpeg
+- new database schema (includes performance and various other improvements)
 - added support for PostgreSQL
 - fixed issue #25 (https://github.com/geuma/pDLNA/issues/25) -aka- invalid BrowseMetadata response
+- added EnableDBStatistics configuration parameter (NOT FOR PRODUCTIVE ENVIRONMENT)
+- REMOVED transcoding support (will be reimplemented)
 
 Version 0.64.3
 29-12-2013
